사이드바 변경사항 수정1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="filter-section">
                 <p class="category-title">찾았어요</p>
                 <p class="category-description">현재 주인을 찾고 있는 물건들이에요.</p>
-                <p>브랜치 테스트</p>
+                <p>브랜치 테스트</p>ㄴㄴㄴㄴ
             </div>
         </form>
         <div class="card-container">
