두번째 수정본

--- a/html/popup.html
+++ b/html/popup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/popup.css">
 </head>
 <body>
+    <!-- 수정본 -->
     <div class="event">
         <button onclick="javascript:window.close()"><img src="../img/arrow.png"></button>
         <h1>분실물 등록</h1>
