찾았어요 페이지에 헤더 추가

--- a/found.html
+++ b/found.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="./css/found.css">
 </head>
 <body>
+    <header>
+        <!-- 로고 -->
+        <img class="logo" src="./assets/uhd-logo 1.png" alt="logo">
+
+        <!-- 메뉴 -->
+        <nav class="nav">
+            <ul>
+                <li><a href="#">서비스 소개</a></li>
+                <li><a href="#">찾았어요</a></li>
+                <li><a href="#">찾아요</a></li>
+                <li><a href="#">내 게시글</a></li>
+            </ul>
+        </nav>
+
+        <!-- 버튼 -->
+        <div class="header-btn">
+            <button class="mypage">마이페이지</button>
+            <button class="register">분실물 등록</button>
+        </div>
+    </header>
     <main>
         <form class="filter">
             <div class="filter-section">
