이전 커밋이 되지 않아 다시 커밋

--- a/found.html
+++ b/found.html
@@ -31,7 +31,7 @@
         <form class="filter">
             <div class="filter-section">
                 <p class="category-title">찾았어요</p>
-                <p class="category-description">현재 주인을 찾고 있는 물건들이에요!</p>
+                <p class="category-description">현재 주인을 찾고 있는 물건들이에요.</p>
             </div>
             <div class="filter-section">
                 <p class="filter-title">검색어</p>
