--- a/html/popup.html
+++ b/html/popup.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 수정본 -->
     <div class="event">
-        <button onclick="javascript:window.close()"><img src="../img/arrow.png"></button>
+        <button onclick="javascript:window.close()"><img src="../assets/arrow.png"></button>
         <h1>분실물 등록</h1>
         <p id="p1">본인이 잃어버린 분실물을 등록하려면 <b>'찾아요'</b>버튼,</p>
         <p id="p2">본인이 습득한 분실물을 등록하려면 <b>'찾았어요'</b></p>
