feat : 서비스 소개 인트로 내용 추가

--- a/intro.html
+++ b/intro.html
@@ -45,6 +45,16 @@
                 </div>
             </div>
         </section>
+
+        <section class="servise-introduce">
+            <div>
+                <div class="servise-introduce-area">
+                    <div>서비스 이용 방법</div>
+                </div>
+            </div>
+            
+            <div class="divider"></div>
+        </section>
     </main>
 </body>
 </html>
