--- a/html/Findit Register.html
+++ b/html/Findit Register.html
@@ -10,20 +10,30 @@
     <div class="box1">
         <h1>분실물 등록 - 찾아요</h1>
     </div>
-    <div class="container">
-        <p>물품명*</p>
-        <div class="inputbox"><input type="text" name="objectname" placeholder="잃어버린 물건의 이름을 입력하세요." required></div>
-        <p>예상위치</p>
-        <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." ></div>
-        <p>간단설명*</p>
-        <div class="biginputbox"> <textarea name="description" placeholder="분실물에 대해 간단히 설명해주세요(100자 이내)" required></textarea></div>
-        <p>카테고리*</p>
-        <div class="checkbox"><input type="checkbox" name="" ><p>전자기기</p>
-            <input type="checkbox" name=""><p>의류/악세사리</p>
-            <input type="checkbox" name=""><p>기타</p>
+    <div class="align">
+        <div class="container">
+                <p>물품명*</p>
+                <div class="inputbox"><input type="text" name="objectname" placeholder="잃어버린 물건의 이름을 입력하세요." required></div>
+                <p>예상위치</p>
+                <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." ></div>
+                <p>간단설명*</p>
+                <div class="biginputbox"> <textarea name="description" placeholder="분실물에 대해 간단히 설명해주세요(100자 이내)" required></textarea></div>
+                <p>카테고리*</p>
+                <div class="checkbox"><input type="checkbox" name="" ><p>전자기기</p>
+                    <input type="checkbox" name=""><p>의류/악세사리</p>
+                    <input type="checkbox" name=""><p>기타</p>
+                </div>
+                <p>만날장소*</p>
+                <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." required></div>
+            </div>
+            <div class="upload-box">
+                <label for="fileInput" class="upload-label">
+                    <p>⬆️</p>
+                    <div class="upload-text">이미지 업로드</div>
+                    <input type="file" id="fileInput" accept="image/*" hidden />
+                </label>
+                <img id="preview" src="#" alt="미리보기" style="display:none;" />
+            </div>
         </div>
-        <p>만날장소*</p>
-        <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." required></div>
-    </div>
 </body>
 </html>
