--- a/html/found-register.html
+++ b/html/found-register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/Findit Register.css">
+    <link rel="stylesheet" href="../css/findit-Register.css">
 </head>
 <body>
     <div class="box1">
