--- a/html/intro.html
+++ b/html/intro.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
     <link href="https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/intro.css">
+    <link rel="stylesheet" href="../css/intro.css">
 </head>
 <body>
     <header>
         <!-- 로고 -->
-        <img class="logo" src="./assets/uhd-logo 1.png" alt="logo">
+        <img class="logo" src="../assets/uhd-logo 1.png" alt="logo">
 
         <!-- 메뉴 -->
         <nav class="nav">
@@ -32,7 +32,7 @@
 
     <main>
         <section class="intro">
-            <img class="main-school-img" src="./assets/intro-img.png" alt="dgsw">
+            <img class="main-school-img" src="../assets/intro-img.png" alt="dgsw">
 
             <div class="intro-over">
                 <div class="intro-lar-texts">
@@ -40,7 +40,7 @@
                     <div>어떻게 찾을까요?</div>
                 </div>
                 <div class="intro-small-texts">
-                    <div class="intro-small-text1">분실물 찾기 서비스, <span><img src="./assets/intro-text-img.png" alt="어디"/></span>가 그 고민을 해결해드립니다.</div>
+                    <div class="intro-small-text1">분실물 찾기 서비스, <span><img src="../assets/intro-text-img.png" alt="어디"/></span>가 그 고민을 해결해드립니다.</div>
                     <div class="intro-small-text2">저희와 함께 여러분의 소중한 물건을 찾아볼까요?</div>
                 </div>
             </div>
