--- a/html/signin.html
+++ b/html/signin.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>어디 - 로그인</title>
-  <link rel="stylesheet" href="./css/signin.css" />
+  <link rel="stylesheet" href="../css/signin.css" />
 </head>
 <body>
   <div class="container">
     <div class="advertise">
-      <img src="./assets/pin.png" alt="pin" class="pin"/>
+      <img src="../assets/pin.png" alt="pin" class="pin"/>
       <h2>내 물건 <span>어디갔지?</span></h2>
       <p>학교에서 잃어버린 내 물건, <br>'어디'에서 손쉽게 찾아보세요!</p> 
       <div class="dot">
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="reallogin">
-      <img src="./assets/uhd-logo 1.png" alt="ULogo" class="ulogo" position="ab"/>
+      <img src="../assets/uhd-logo 1.png" alt="ULogo" class="ulogo" position="ab"/>
       <label for="userid">아이디</label>
       <input type="text" id="userid" placeholder="아이디 입력" />
       <label for="password">비밀번호</label>
