--- a/html/intro.html
+++ b/html/intro.html
@@ -40,8 +40,8 @@
                     <div>어떻게 찾을까요?</div>
                 </div>
                 <div class="intro-small-texts">
-                    <div class="intro-small-text1">분실물 찾기 서비스, <span><img src="../assets/intro-text-img.png" alt="어디"/></span>가 그 고민을 해결해드립니다.</div>
-                    <div class="intro-small-text2">저희와 함께 여러분의 소중한 물건을 찾아볼까요?</div>
+                    <p class="intro-small-text1">분실물 찾기 서비스, <span><img src="../assets/intro-text-img.png" alt="어디"/></span>가 그 고민을 해결해드립니다.</p>
+                    <p class="intro-small-text2">저희와 함께 여러분의 소중한 물건을 찾아볼까요?</p>
                 </div>
             </div>
         </section>
