--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         <section class="intro">
             <img class="main-school-img" src="../assets/main-img.png" alt="dgsw">
             <div class="intro-over">
-                <div class="intro-font">대소고에서 어떤 물건을 찾으시나요?</div>
+                <p class="intro-font">대소고에서 어떤 물건을 찾으시나요?</p>
                 <!-- 검색창, 검색 아이콘 -->
                 <div class="search-wrapper">
                     <input class="search" type="text" placeholder="대구소프트웨어마이스터고에서 찾을 물건을 검색해보세요.">
@@ -47,7 +47,7 @@
         <section class="latest-item">
             <div>
                 <div class="latest-item-text-area">
-                    <div>최근 등록된 게시물</div>
+                    <p>최근 등록된 게시물</p>
                 </div>
             </div>
             <div class="divider"></div>
