--- a/html/intro.html
+++ b/html/intro.html
@@ -36,8 +36,8 @@
 
             <div class="intro-over">
                 <div class="intro-lar-texts">
-                    <div>학교에서 잃어버린 분실물</div>
-                    <div>어떻게 찾을까요?</div>
+                    <p>학교에서 잃어버린 분실물</p>
+                    <p>어떻게 찾을까요?</p>
                 </div>
                 <div class="intro-small-texts">
                     <p class="intro-small-text1">분실물 찾기 서비스, <span><img src="../assets/intro-text-img.png" alt="어디"/></span>가 그 고민을 해결해드립니다.</p>
