--- a/html/found-register.html
+++ b/html/found-register.html
@@ -12,18 +12,18 @@
     </div>
     <div class="inline">
         <div class="container">
-            <p>물품명*</p>
+            <h4>물품명*</h4>
             <div class="inputbox"><input type="text" name="objectname" placeholder="잃어버린 물건의 이름을 입력하세요." required></div>
-            <p>예상위치</p>
+            <h4>예상위치</h4>
             <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." ></div>
-            <p>간단설명*</p>
+            <h4>간단설명*</h4>
             <div class="biginputbox"> <textarea name="description" placeholder="분실물에 대해 간단히 설명해주세요(100자 이내)" required></textarea></div>
-            <p>카테고리*</p>
+            <h4>카테고리*</h4>
             <div class="checkbox"><input type="checkbox" name="" ><p>전자기기</p>
                 <input type="checkbox" name=""><p>의류/악세사리</p>
                 <input type="checkbox" name=""><p>기타</p>
             </div>
-            <p>만날장소*</p>
+            <h4>만날장소*</h4>
             <div class="inputbox"><input type="text" name="location" placeholder="분실물이 있을 것으로 예상돠는 위치를 입력하세요." required></div>
         </div>
         <div class="upload-box">
@@ -33,6 +33,7 @@
                 <input type="file" id="fileInput" accept="image/*" hidden />
             </label>
             <img id="preview" src="#" alt="미리보기" style="display:none;" />
+            
         </div>
     </div>
 </body>
