--- a/html/signupID.html
+++ b/html/signupID.html
@@ -13,20 +13,19 @@
       <h2>내 물건 <span>어디갔지?</span></h2>
       <p>학교에서 잃어버린 내 물건, <br>'어디'에서 손쉽게 찾아보세요!</p> 
       <div class="dot">
-        <span class="firstdot"></span>
-        <span class="seconddot"></span>
-        <span class="thirddot"></span>
+        <span class="dotactive"></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
     <div class="reallogin">
       <img src="../assets/uhd-logo 1.png" alt="ULogo" class="ulogo" position="ab"/>
       <label for="userid">성명</label>
-      <input type="text" id="name" placeholder="성명 입력" />
+      <input type="text" id="userid" placeholder="성명 입력" />
       <label for="password">아이디</label>
-      <input type="text" id="userid" placeholder="아이디 입력" />
+      <input type="password" id="password" placeholder="아이디 입력" />
       <button class="doublecheck">중복확인</button>
       <button class="loginbutton">다음</button>
-      <button class="alreadyhave">이미 계정이 있으신가요?</button>
     </div>
   </div>
 </body>
