--- a/html/signin.html
+++ b/html/signin.html
@@ -13,9 +13,9 @@
       <h2>내 물건 <span>어디갔지?</span></h2>
       <p>학교에서 잃어버린 내 물건, <br>'어디'에서 손쉽게 찾아보세요!</p> 
       <div class="dot">
-        <span class="dotactive"></span>
-        <span></span>
-        <span></span>
+        <span class="firstdot"></span>
+        <span class="seconddot"></span>
+        <span class="thirddot"></span>
       </div>
     </div>
     <div class="reallogin">
