feat: 회원가입 페이지 수정

--- a/html/signupschool.html
+++ b/html/signupschool.html
@@ -13,9 +13,9 @@
       <h2>내 물건 <span>어디갔지?</span></h2>
       <p>학교에서 잃어버린 내 물건, <br>'어디'에서 손쉽게 찾아보세요!</p> 
       <div class="dot">
-        <span class="dotactive"></span>
-        <span></span>
-        <span></span>
+        <span class="firstdot"></span>
+        <span class="seconddot"></span>
+        <span class="thirddot"></span>
       </div>
     </div>
     <div class="reallogin">
@@ -26,6 +26,7 @@
       <input type="text" id="IDinput" placeholder="아이디 입력" />
       <button class="doublecheck">중복확인</button>
       <button class="loginbutton">다음</button>
+      <button class="alreadyhave">이미 계정이 있으신가요?</button>
     </div>
   </div>
 </body>
