--- a/html/signupPW.html
+++ b/html/signupPW.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>어디 - 로그인</title>
-  <link rel="stylesheet" href="../css/signupID.css" />
+  <link rel="stylesheet" href="../css/signupPW.css" />
 </head>
 <body>
   <div class="container">
@@ -13,20 +13,20 @@
       <h2>내 물건 <span>어디갔지?</span></h2>
       <p>학교에서 잃어버린 내 물건, <br>'어디'에서 손쉽게 찾아보세요!</p> 
       <div class="dot">
-        <span class="dotactive"></span>
-        <span></span>
-        <span></span>
+        <span class="firstdot"></span>
+        <span class="seconddot"></span>
+        <span class="thirddot"></span>
       </div>
     </div>
     <div class="reallogin">
       <img src="../assets/uhd-logo 1.png" alt="ULogo" class="ulogo" position="ab"/>
-      <label for="name">성명</label>
-      <input type="text" id="name" placeholder="성명 입력" />
-      <label for="ID">아이디</label>
-      <input type="text" id="IDinput" placeholder="아이디 입력" />
-      <button class="doublecheck">중복확인</button>
+      <label for="PW">비밀번호 설정</label>
+      <input type="password" id="PWinput" placeholder="비밀번호 입력 (숫자, 특수문자 포함 8자 이상)" />
+      <label for="PWcheck">비밀번호 확인</label>
+      <input type="password" id="PWcheckinput" placeholder="비밀번호 다시 입력" />
       <button class="loginbutton">다음</button>
+      <button class="rightpw">비밀번호가 일치합니다.</button>
     </div>
   </div>
 </body>
-</html>
+</html> 
