--- a/html/signupID.html
+++ b/html/signupID.html
@@ -25,7 +25,8 @@
       <label for="ID">아이디</label>
       <input type="text" id="IDinput" placeholder="아이디 입력" />
       <button class="doublecheck">중복확인</button>
-      <button class="loginbutton">다음</button>
+      <button class="gonext">다음</button>
+      <button class="alreadyhave">이미 계정이 있으신가요?</button>
     </div>
   </div>
 </body>
