--- a/html/signupPW.html
+++ b/html/signupPW.html
@@ -24,7 +24,7 @@
       <input type="password" id="PWinput" placeholder="비밀번호 입력 (숫자, 특수문자 포함 8자 이상)" />
       <label for="PWcheck">비밀번호 확인</label>
       <input type="password" id="PWcheckinput" placeholder="비밀번호 다시 입력" />
-      <button class="loginbutton">다음</button>
+      <button class="gogonext">다음</button>
       <button class="rightpw">비밀번호가 일치합니다.</button>
     </div>
   </div>
