feat: 네비게이션 페이지 클릭시 해당 페이지로 연결

--- a/html/intro.html
+++ b/html/intro.html
@@ -16,10 +16,10 @@
         <!-- 메뉴 -->
         <nav class="nav">
             <ul>
-                <li><a href="#" id="nav-intro">서비스 소개</a></li>
-                <li><a href="#" id="nav-found">찾았어요</a></li>
-                <li><a href="#" id="nav-find">찾아요</a></li>
-                <li><a href="#" id="nav-mypage">내 게시글</a></li>
+                <li><a href="./intro.html" id="nav-intro">서비스 소개</a></li>
+                <li><a href="./found.html" id="nav-found">찾았어요</a></li>
+                <li><a href="./find.html" id="nav-find">찾아요</a></li>
+                <li><a href="./mypost.html" id="nav-mypage">내 게시글</a></li>
             </ul>
         </nav>
 
