feat : 로고 이미지 클릭 시 메인 페이지 이동 및 해더 밑선 추가

--- a/html/intro.html
+++ b/html/intro.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <!-- 로고 -->
-        <img class="logo" src="../assets/uhd-logo 1.png" alt="logo">
-
+        <a href="./index.html"><img class="logo" src="../assets/uhd-logo 1.png" alt="logo"></a>
         <!-- 메뉴 -->
         <nav class="nav">
             <ul>
